--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<header>
-		<a href="/" alt="Logo, navigate to home">Brians Ostebiks</a>
+		<a href="#!" alt="Logo and navigate to home">Brians Ostebiks</a>
 		<input type="button" value="Menu">
 		<nav>
 			<ul>
@@ -28,7 +28,7 @@
 			derfor kan du være sikker på, at jeg kun har det allerbedste til dig.</p>
 
 		<section aria-labelledby="Særlige_tilbud">
-			<h2 aria-label="Særlige_tilbud">Særlige tilbud</h2>
+			<h2 id="Særlige_tilbud">Særlige tilbud</h2>
 			<div>
 				<h3>Ældgammel Rochefort</h3>
 				<img src="https://via.placeholder.com/200x200" alt="Rochefort ost billede">
@@ -52,28 +52,30 @@
 			</div>
 
 		</section>
-		
-		<footer class="footer">
-			<section aria-label="information">
-				<p>Brians Ostebiks</p>
-				<p>Camembert Boulevard 42</p>
-				<p>4242 Nørre Osteved</p>
-				<p>Tlf.: 1243 5687</p>
-				<p><a href="mailto:cheesylove@briansostebiks.dk">cheesylove@briansostebiks.dk</a></p>
-			</section>
-			
-			<section aria-labelledby="social-media">
-				<h2 id="social-media">Find os her</h2>
-				<ul>
-					<li><a href="#!">Facebook</a></li>
-					<li><a href="#!">Instragram</a></li>
-					<li><a href="#!">Twitter</a></li>
-				</ul>
-				</div>
-				<div>
-					Ophavsret &copy; 2018 Brians Ostebiks. Alle rettigheder forbeholdes.
-				</div>
-		</footer>
+	</main>
+
+	<footer class="footer">
+		<section aria-label="information">
+			<p>Brians Ostebiks</p>
+			<p>Camembert Boulevard 42</p>
+			<p>4242 Nørre Osteved</p>
+			<p>Tlf.: 1243 5687</p>
+			<p><a href="mailto:cheesylove@briansostebiks.dk">cheesylove@briansostebiks.dk</a></p>
+		</section>
+
+		<section aria-labelledby="social-media">
+			<h2 id="social-media">Find os her</h2>
+			<ul>
+				<li><a href="#!">Facebook</a></li>
+				<li><a href="#!">Instragram</a></li>
+				<li><a href="#!">Twitter</a></li>
+			</ul>
+
+			<div>
+				Ophavsret &copy; 2018 Brians Ostebiks. Alle rettigheder forbeholdes.
+			</div>
+		</section>
+	</footer>
 </body>
 
 </html>
